lox-tests/tests/this/this_at_top_level.stderr
ERROR: Cannot use `this` outside of a class
 --> 1:1
  |
1 | this; // Error at 'this': Can't use 'this' outside of a class.
  | ^--^
